--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
         <div class="row no-gutters">
             <div class="col col-12 text-center">
                 <h1 id="currQuestion">The Question Goes Here?</h1>
-                <P><small>YOU HAVE <span>30</span> SECONDS TO ANSWER</small></P>
+                <P><small>YOU HAVE <span id="timer">30</span> SECONDS TO ANSWER</small></P>
             </div>
         </div>
         <div class="row no-gutters main col col-12">
-            <div onclick="answerValidation1()" class="col col-6 text-center">
+            <div onclick="answerValidation1();" class="col col-6 text-center">
                 <a href="#"><h2 id="option1" class="text-center"></h2></a>
             </div>
-            <div onclick="answerValidation2()" class="col col-6 text-center">
+            <div onclick="answerValidation2();" class="col col-6 text-center">
                 <a href="#"><h2 id="option2" class="text-center"></h2></a>
             </div>
         </div>
         <div class="row no-gutters main col col-12">
-            <div onclick="answerValidation3()" class="col col-6 text-center">
+            <div onclick="answerValidation3();" class="col col-6 text-center">
                 <a href="#"><h2 id="option3" class="text-center"></h2></a>
             </div>
-            <div onclick="answerValidation4()" class="col col-6 text-center">
+            <div onclick="answerValidation4();" class="col col-6 text-center">
                 <a href="#"><h2 id="option4" class="text-center"></h2></a>
             </div>
         </div>
@@ -53,7 +53,7 @@
     <div id="wrong" class="container-fluid">
         <div class="row justify-content-center align-items-center">
             <h1 class="text-center col-12">WRONG</h1><br>
-            <P class="text-center col-12"><small>TRY AGAIN</small></P>
+            <P class="text-center col-12"><small>NEXT QUESTION</small></P>
         </div>
     </div>
 
@@ -67,7 +67,7 @@
     <div id="outOfTime" class="container-fluid">
         <div class="row justify-content-center align-items-center">
             <h1 class="text-center col-12">You Are Out Of Time</h1><br>
-            <P class="text-center col-12"><small>TRY AGAIN</small></P>
+            <P class="text-center col-12"><small>NEXT QUESTION</small></P>
         </div>
     </div>
 
@@ -77,6 +77,7 @@
             <P class="text-center col-12"><small>HERE ARE YOUR RESULTS:</small></P>
             <h2 class="text-center col-12">CORRECT: <span id="correctAmount"></span></h2>
             <h2 class="text-center col-12">WRONG: <span id="wrongAmount"></span></h2>
+            <h2 class="text-center col-12">UNANSWERED: <span id="unanswered"></span></h2>
             <div class="col col-12 text-center">
                 <a href="#" class="col col-12"><P onclick="closeFinalScore()" class="button"><small>RESTART THE GAME</small></P></a>
             </div>
